<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Contact Sync</string>
    <string name="title_settings">Settings</string>
    <string name="title_sync">Sync Accounts</string>
    <string name="title_logs">Logs</string>
    <string name="title_results">Last Results</string>
    <string name="navigation_drawer_open">Open menu drawer</string>
    <string name="navigation_drawer_close">Close menu drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="accounts">Accounts</string>
    <string name="account1">Account 1</string>
    <string name="account2">Account 2</string>
    <string name="options">Options</string>
    <string name="groups">Sync Groups</string>
    <string name="photos">Sync Photos</string>

    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">ContactSync</string>
    <string name="title_activity_results">Matched Results</string>
    <string name="title_activity_compare">Compare</string>
    <string name="delete_contact">Delete Contact</string>
    <string name="merge_contacts">Merge Contacts</string>
    <string name="add_to_unmatched">Add to Unmatched</string>
    <string name="accounts_groups">ACCOUNTS</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="drawer_open">Open settings drawer</string>
    <string name="drawer_close">Close settings drawer</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
