<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent">

    <PreferenceCategory
        android:title="@string/accounts">

        <ListPreference
            android:key="account1"
            android:title="@string/account1" />

        <ListPreference
            android:key="account2"
            android:title="@string/account2" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/options">

        <SwitchPreference
            android:defaultValue="true"
            android:key="GroupsOnOff"
            android:title="@string/groups" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="PicturesOnOff"
            android:title="@string/photos" />

    </PreferenceCategory>


</PreferenceScreen>
