<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent">

    <PreferenceCategory
        android:title="@string/account1">

        <Spinner
            android:id="@+id/account1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/account2">

        <!--<Spinner
            android:id="@+id/account2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />-->

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/options">

        <!-- <Switch
            android:id="@+id/groups"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_gap"
            android:text="@string/groups" />

        <Switch
            android:id="@+id/photos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_gap"
            android:text="@string/photos" /> -->

    </PreferenceCategory>


</PreferenceScreen>
