<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
	android:paddingTop="@dimen/medium_gap"
	android:background="@android:color/white"
	>
	
	<TextView 
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/accounts"
		android:textAppearance="?android:attr/textAppearanceMedium"
		android:background="@color/material_orange_500"
		android:textColor="@android:color/white"
		android:padding="@dimen/medium_gap"
		/>
	
	<TextView 
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/account1"
		android:padding="@dimen/medium_gap"
		android:textAppearance="?android:attr/textAppearanceSmall"
		android:textStyle="bold"
	/>
    <Spinner 
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:id="@+id/account1selector"
		android:padding="@dimen/medium_gap"
		android:textAppearance="?android:attr/textAppearanceMedium"
		/>
	
	<TextView 
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/account2"
		android:padding="@dimen/medium_gap"
		android:textAppearance="?android:attr/textAppearanceSmall"
		android:textStyle="bold"
	/>
    <Spinner 
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:id="@+id/account2selector"
		android:padding="@dimen/medium_gap"
		android:textAppearance="?android:attr/textAppearanceMedium"
	/>

	<TextView 
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/options"
		android:textAppearance="?android:attr/textAppearanceMedium"
		android:background="@color/material_orange_500"
		android:textColor="@android:color/white"
		android:padding="@dimen/medium_gap"
		android:layout_marginTop="@dimen/large_gap"

	/>

	<GridLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:columnCount="2"
		android:rowCount="3"
	>
		<TextView 
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/groups"
			android:padding="@dimen/medium_gap"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:layout_column="0"
			android:layout_row="0"
		/>
	
		<android.support.v7.widget.SwitchCompat
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:defaultValue="false"
			android:id="@+id/groups"
			android:padding="@dimen/medium_gap"
			android:layout_column="1"
			android:layout_row="0"
		/>
	
		<TextView 
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/photos"
			android:padding="@dimen/medium_gap"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:layout_column="0"
			android:layout_row="1"
		/>

		<android.support.v7.widget.SwitchCompat
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:defaultValue="false"
			android:id="@+id/pictures"
			android:padding="@dimen/medium_gap"
			android:layout_column="1"
			android:layout_row="1"
		/>
	
		<TextView 
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/deep"
			android:padding="@dimen/medium_gap"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:layout_column="0"
			android:layout_row="2"
		/>
	
		<android.support.v7.widget.SwitchCompat
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:defaultValue="false"
			android:id="@+id/deep"
			android:padding="@dimen/medium_gap"
			android:layout_column="1"
			android:layout_row="2"
		/>
	</GridLayout>

</LinearLayout>
